Overflow css fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -958,4 +958,5 @@ footer .footer-right {
 
 	background: rgba(0, 0, 0, 0.5);
 	color: #f1f1f1;
+	overflow: hidden;
   }
